--- a/frontend/index.html
+++ b/frontend/index.html
@@ -17,8 +17,8 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
-        <div id="header"></div>
-        <div id="main"></div>
-        <div id="footer"></div>
+        <header></header>
+        <main></main>
+        <footer></footer>
     </body>
 </html>
