--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,11 @@
     </head>
     <body>
         <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+            <p class="browsehappy">
+                You are using an <strong>outdated</strong> browser. 
+                Please <a href="#">upgrade your browser</a> 
+                to improve your experience.
+            </p>
         <![endif]-->
         
         <header></header>
