--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,18 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./css/main.css">
+
         <script src="./js/WebGLDetect.js"></script>
+
+        <!--WebGL + THREE.js + ImGUI imports-->
+        <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.21.4/system.js"></script>
+        <script src="./js/system.config.js"></script>
+        <script type="text/javascript">
+            SystemJS.import("./main")
+            .then(function (main) { main.default(); })
+            .catch(console.error);
+        </script>-->
+        
     </head>
     <body>
         <!--[if lt IE 7]>
