--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -17,6 +17,7 @@
     </head>
     <body>        
         <canvas id="output"></canvas>
+        <div id="nameplate_container"></div>
         <script src="../js/3DView/DisplayObject.js"></script>
         <script src="../js/3DView/DisplayManager.js"></script>
         <script src="../js/3DView/3DView.js"></script>
