--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -9,6 +9,8 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://127.0.0.1:5500/frontend/">
+
         <link rel="stylesheet" href="../css/3DView.css">
 
         <!--THREE.js + (soon to come) ImGUI imports-->
