--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,10 +9,12 @@
         <title>Codebase Visualizer 3D</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://localhost:5500/frontend/html/3DView.html">
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self' *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://localhost:8080/repo/add">
         
         <link rel="stylesheet" href="./css/main.css">
-        
+
+        <script src="../js/config.js"></script>
+
         <script src="./js/WebGLDetect.js"></script>
         <script src="./js/repository.js"></script>
     </head>
