COD-19 Added fdg and somewhat updated json parsing, plus other typos/minor fixes fixed.

--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
-       <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+        <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,15 +13,22 @@
 
         <link rel="stylesheet" href="../css/3DView.css">
 
-        <!--THREE.js + (soon to come) ImGUI imports-->
+        <!-- THREE.js + (soon to come) ImGUI imports -->
         <script src="../js/treejs/three.js"></script>
         <script src="../js/treejs/controls/OrbitControls.js"></script>
     </head>
     <body>        
         <canvas id="output"></canvas>
         <div id="nameplate_container"></div>
+        <!-- 3DView.js imports-->
         <script src="../js/3DView/DisplayObject.js"></script>
         <script src="../js/3DView/DisplayManager.js"></script>
+        <script src="../js/FDG/LinkProperties.js"></script>
+        <script src="../js/FDG/Node.js"></script>
+        <script src="../js/FDG/FDG.js"></script>
+
+        <script src="../js/DataProcessing/FileProcessing.js"></script>
+
         <script src="../js/3DView/3DView.js"></script>
     </body>
 </html>
