--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -9,11 +9,10 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://localhost:8080/repo/add">
 
         <link rel="stylesheet" href="../css/3DView.css">
 
-        <script src="../js/config.js"></script>
+        <script src="../js/config/config.js"></script>
 
         <!-- THREE.js + (soon to come) ImGUI imports -->
         <script src="../js/treejs/three.js"></script>
