COD-27 Added localization of printed strings. Refactored and Fixed frontend. Fixed drawing, redid requests to become fetch instead of XMLHttpRequest. Added style configuration files and made program use these new configuration files. Plus other minor fixes

--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -12,7 +12,9 @@
 
         <link rel="stylesheet" href="../css/3DView.css">
 
+        <script src="../js/localization/locale.js"></script>
         <script src="../js/config/config.js"></script>
+        <script src="../js/config/style.js"></script>
 
         <!-- THREE.js + (soon to come) ImGUI imports -->
         <script src="../js/treejs/three.js"></script>
