--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,8 +11,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <link rel="stylesheet" href="./css/main.css">
-
-        <script src="../js/config/config.js"></script>
+        
+        <script src="./js/localization/locale.js"></script>
+        <script src="./js/config/config.js"></script>
+        <script src="./js/config/style.js"></script>
 
         <script src="./js/WebGLDetect.js"></script>
         <script src="./js/repository.js"></script>
