--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -17,7 +17,12 @@
         <script src="../js/treejs/controls/OrbitControls.js"></script>
 
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.21.4/system.js"></script>
-        <script type="text/javascript" src="../js/GUI/Window.js"></script>
+        <script type="text/javascript" src="../js/GUI/Menubar.js"></script>
+        <script type="text/javascript" src="../js/GUI/FiletreeWindow.js"></script>
+        <script type="text/javascript" src="../js/GUI/CodeInspectionWindow.js"></script>
+        <script type="text/javascript" src="../js/GUI/NamespaceWindow.js"></script>
+        <script type="text/javascript" src="../js/GUI/QualityMetricsWindow.js"></script>
+        <script type="text/javascript" src="../js/GUI/WindowManager.js"></script>
     </head>
     <body>        
         <canvas id="output"></canvas>
