removed type from script tag from html file.

--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -24,12 +24,12 @@
         <script src="../js/treejs/three.js"></script>
         <script src="../js/treejs/controls/OrbitControls.js"></script>
 
-        <script type="text/javascript" src="../js/GUI/Menubar.js"></script>
-        <script type="text/javascript" src="../js/GUI/FiletreeWindow.js"></script>
-        <script type="text/javascript" src="../js/GUI/CodeInspectionWindow.js"></script>
-        <script type="text/javascript" src="../js/GUI/NamespaceWindow.js"></script>
-        <script type="text/javascript" src="../js/GUI/QualityMetricsWindow.js"></script>
-        <script type="text/javascript" src="../js/GUI/WindowManager.js"></script>
+        <script src="../js/GUI/Menubar.js"></script>
+        <script src="../js/GUI/FiletreeWindow.js"></script>
+        <script src="../js/GUI/CodeInspectionWindow.js"></script>
+        <script src="../js/GUI/NamespaceWindow.js"></script>
+        <script src="../js/GUI/QualityMetricsWindow.js"></script>
+        <script src="../js/GUI/WindowManager.js"></script>
     </head>
     <body>
         <div id="loader"></div>
