enabled systemjs from a seprate file.

--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -16,7 +16,7 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.21.4/system.js"></script>
 
         <script src="../js/localization/locale.js"></script>
-       <!-- <script src="../js/config/SystemJsConfig.js"></script> -->
+        <script src="../js/config/SystemJsConfig.js"></script>
         <script src="../js/config/config.js"></script>
         <script src="../js/config/style.js"></script>
 
