COD-31 added mouse event and made it send a request upon click on a object in the scene.

--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -42,6 +42,7 @@
         <script src="../js/FDG/Node.js"></script>
         <script src="../js/FDG/FDG.js"></script>
 
+        <script src="../js/DataProcessing/FunctionModel.js"></script>
         <script src="../js/DataProcessing/FileProcessing.js"></script>
 
         <script src="../js/3DView/3DView.js"></script>
