COD-40 Repositories list is displayed in Imgui window.

--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -29,6 +29,7 @@
         <script src="../js/GUI/CodeInspectionWindow.js"></script>
         <script src="../js/GUI/NamespaceWindow.js"></script>
         <script src="../js/GUI/QualityMetricsWindow.js"></script>
+        <script src="../js/GUI/RepositoriesWindow.js"></script>
         <script src="../js/GUI/WindowManager.js"></script>
     </head>
     <body>
