COD-39 add request use websocket to send request from front-end and changed close messages from back-end to send reason with json.

--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -31,9 +31,14 @@
         <script src="../js/GUI/QualityMetricsWindow.js"></script>
         <script src="../js/GUI/RepositoriesWindow.js"></script>
         <script src="../js/GUI/WindowManager.js"></script>
+
     </head>
     <body>
-        <div id="loader"></div>
+        <div id="statusDiv">
+            <div id="loader"></div>
+            <p id="status"></p>
+        </div>
+        
         <canvas id="output"></canvas>
         <div id="nameplate_container"></div>
         <!-- 3DView.js imports-->
