COD-45 Fixed typo on frontpage

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,7 +36,7 @@
                     That is the aim of Codebase Visualizer 3D.
                 </p>
                 <p>
-                    Submit a gir repository link in the field below to check it out.
+                    Submit a git repository link in the field below to check it out.
                 </p>
             </header>
             <main>
