--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -37,6 +37,8 @@
         <div id="statusDiv">
             <div id="loader"></div>
             <p id="status"></p>
+            <p id="status_parsedcount"></p>
+            <p id="status_skippedcount"></p>
         </div>
         
         <canvas id="output"></canvas>
