--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -36,6 +36,7 @@
     <body>
         <div id="statusDiv">
             <div id="loader"></div>
+            <progress id="status_progressbar" value="0" max="1"></progress>
             <p id="status"></p>
             <p id="status_parsedcount"></p>
             <p id="status_skippedcount"></p>
