Fixed typos in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,7 @@
                 <h3>Supported browsers</h3> 
                 <table>
                     <tr>    <th>Browser</th>                <th>Version</th>                </tr>
-                    <tr>    <td>explorer</td>               <td class="non">Non</td>        </tr>
+                    <tr>    <td>Explorer</td>               <td class="non">Non</td>        </tr>
                     <tr>    <td>Edge</td>                   <td class="complete">16</td>    </tr>
                     <tr>    <td>Firefox</td>                <td class="complete">52</td>    </tr>
                     <tr>    <td>Chrome</td>                 <td class="complete">57</td>    </tr>
@@ -84,7 +84,7 @@
                             <th>functions</th>
                             <th>classes</th>
                             <th>templates</th>
-                            <th>if/elsee/switch</th>
+                            <th>if/else/switch</th>
                             <th>primitives</th>
                             <th>objects</th>
                             <th>comments</th>
