Added cdn for three.js file and removed three.js from repo

--- a/frontend/html/3DView.html
+++ b/frontend/html/3DView.html
@@ -21,7 +21,7 @@
         <script src="../js/config/style.js"></script>
 
         <!-- THREE.js + (soon to come) ImGUI imports -->
-        <script src="../js/treejs/three.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/104/three.min.js"></script>
         <script src="../js/treejs/controls/OrbitControls.js"></script>
 
         <script src="../js/GUI/Menubar.js"></script>
